# Research

./: .lychee.toml  AGENTS.md  CODE OF CONDUCT.md  CODE_OF_CONDUCT.md  LICENSE.md  Qilin_Ransomware Scanner.py  README.md  SECURITY.md  ZD_Stack Overflow.py  dashboard_components.py  dashboard_data_loader.py  dashboard_insights.py  dashboard_privacy.py  li12_unified_dashboard.py  zeid_data_compliance_ready_splunk_Top10.tgz
.devcontainer/: devcontainer.json  setup.sh
Zeid Data Free Content/: README.md  pyproject.toml
Zeid Data Free Content/CrowdStrike/: HOWTO.md  LICENSE  LICENSE.md  README.md
Zeid Data Free Content/CrowdStrike/CrowdStrike/: README.md
Zeid Data Free Content/CrowdStrike/CrowdStrike AI Governance/: LICENSE  README.md  manifest.yaml
Zeid Data Free Content/CrowdStrike/CrowdStrike Falcon AI Governance/: HOWTO.md  README.md
Zeid Data Free Content/CrowdStrike/CrowdStrike Falcon Claude Bot Detection/: README.md
Zeid Data Free Content/CrowdStrike/Zeid Data Falcon LogScale/: CHANGELOG.md
Zeid Data Free Content/Network Scanner/: README.md
Zeid Data Free Content/SentinelOne/: Zeid Data_sentinel_soc2_workbook_multi_source.workbook
Zeid Data Free Content/Snowflake/: HOWTO.md  README.md
Zeid Data Free Content/Snowflake AI/: LICENSE  README.md
Zeid Data Free Content/Splunk/: README.md  savedsearches.conf
projects/zeid_data_emotional_support_bot/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ETHICS_NOTES.md  HOWTO.md  LICENSE.md  README.md  ROADMAP.md  cli.py  coach.py  memory.py  model.py  pyproject.toml  repair_loop.py  tokenizer.py
(+587 files in other folders)
