[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditpack"
version = "1.0.0"
description = "Compliance scanner focused on producing audit-ready evidence bundles, chain-of-custody metadata, and zipped audit packs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "AuditPack Contributors"}]
keywords = ["compliance", "audit", "evidence", "soc2", "iso27001", "nist"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
auditpack = "auditpack.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["auditpack*"]
