[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeid-data-emotion-language-bot"
version = "0.1.0"
description = "A lightweight emotional language training bot with story rich comments."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["emotion_bot*"]
